# lumieres-lausanne-2025

./: .env.template  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/ckeditor/: fields.py
app/fiches/: __init__.py  admin.py  fields.py  forms.py  search_indexes.py  urls_search.py  utils.py  widgets.py
app/fiches/models/: __init__.py
app/fiches/models/contributions/: keyword.py
app/fiches/models/documents/: __init__.py  document.py  document_file.py
app/fiches/models/misc/: notes.py  object_collection.py
app/fiches/models/person/: biography.py  person.py
app/fiches/models/search/: search.py
app/fiches/templates/: base2.html
app/fiches/templates/fiches/: fiche_base2.html
app/fiches/templatetags/: fiches_extras.py
app/fiches/views/: __init__.py  bibliography.py  biography.py  collections.py  projects.py  transcription.py
app/lumieres_project/: settings.py  settings_ckeditor_configs.py
app/lumieres_project/templates/registration/: login_base2.html  login_base3.html
app/pagination/templates/pagination/: pagination.html
app/static/css/: admin.css  display_base.css  edit_base.css  edit_base2.css  innovagency.css  project_description.css  search2.css  tinyMCE_transcripts.css
app/static/js/: collection.js  fiches_admin.js  fiches_edit.js  search.js
django/: .dockerignore  requirements.txt
django/lumieres/fiches/: urls.py
django/lumieres/lumieres_project/: settings.py  urls.py
docker/: docker-compose.v2024.yml
docker/app/: Dockerfile
tools/: clean-urls.py
(+46 files in other folders)
